tests/specs/run/require_esm/main.out
[Module: null prototype] { sync_js: 1 }
[Module: null prototype] { sync_mjs: 1 }
error: Uncaught (in promise) Error: require() cannot be used on an ESM graph with top-level await.[WILDCARD]
require("./async.js");
^
    at [WILDCARD]
