tests/specs/run/require_esm/main.cjs
"use strict";

console.log(require("./sync.js"));
console.log(require("./sync.mjs"));
require("./async.js");
